Aufgabe 3 - Serverseitige Anwendung erstellen
[agre1011] -> added 3.2 (3.2.1a and 3.2.1b)
[gaje1015] -> modified 3.2.2 and 3.2.3

--- a/Aufgabe3/gta_v3/views/gta.ejs
+++ b/Aufgabe3/gta_v3/views/gta.ejs
@@ -1,6 +1,95 @@
+	<!DOCTYPE html>
+	<html lang="en">
 
-	<!-- TODO: HTML AUS AUFGABE2 HIERHER KOPIEREN UND DIE BEISPIEL-EINTRÄGE DER DISCOVERY-LISTE MIT DEN FOLGENDEN ZEILEN ERSETZEN -->
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>GeoTagApp</title>
+		<link rel='stylesheet' href='./stylesheets/style.css'/>
+	</head>
 
-	<% if (taglist !== undefined) taglist.forEach(function(gtag) { %>
-		<li><%= gtag.name %> ( <%= gtag.latitude %>,<%= gtag.longitude %>) <%= gtag.hashtag %> </li>
-	<% }); %>
+	<body>
+
+	<header>
+		<img src="./images/location.png" width="100"
+			 alt="an image of a map and location">
+		<h1>GeoTagApp</h1>
+		<nav>
+			<a href="#">About</a> | <a href="#">Help</a> | <a
+					href="/">Home</a>
+		</nav>
+	</header>
+
+	<main>
+
+		<section class="tagging">
+			<h2>Tagging</h2>
+
+			<!-- ############### Aufgabe1a Form1 Start -->
+			<form id="tag-form" action="/tagging" method="post">
+				<fieldset>
+					<legend>
+						<h3>Enter new GeoTag</h3>
+					</legend>
+
+					<label for="latitude">latitude</label>
+					<input type="text" id="latitude" name="latitude" pattern="[0-9]+\.[0-9]+" required>
+					<label for="longitude">longitude</label>
+					<input type="text" id="longitude" name="longitude" pattern="[0-9]+\.[0-9]+" required>
+					<label for="name">name</label>
+					<input type="text" id="name" name="name" placeholder="some name" pattern="[\w ]+" maxlength="10"
+						   required>
+					<label for="hashtag">hashtag</label>
+					<input type="text" id="hashtag" name="hashtag" placeholder="# + max. 10 letters"
+						   pattern="#\w+" maxlength="11">
+					<div class="button">
+						<input type="submit" value="Submit">
+					</div>
+				</fieldset>
+			</form>
+			<!-- ############### Aufgabe1a Form1 Ende -->
+
+		</section>
+
+		<section class="discovery">
+			<h2>Discovery</h2>
+
+			<!-- ############### Aufgabe1a Form2 Start -->
+			<form id="filter-form" action="/discovery" method="post">
+				<fieldset>
+					<legend>
+						<h3>Filter by Search Term</h3>
+					</legend>
+					<input type="text" id="search" name="search" placeholder="search term">
+					<input type="hidden" id="filter-latitude" name="latitude">
+					<input type="hidden" id="filter-longitude" name="longitude">
+					<input class="button"  type="submit" value="Apply">
+				</fieldset>
+			</form>
+			<!-- ############### Aufgabe1a Form2 Ende -->
+			<div class="mapresults">
+				<div class="taglist">
+					<ul id="results">
+						<% if (taglist !== undefined) taglist.forEach(function(gtag) { %>
+							<li><%= gtag.name %> ( <%= gtag.latitude %>,<%= gtag.longitude %>) <%= gtag.hashtag %> </li>
+						<% }); %>
+					</ul>
+				</div>
+
+				<div class="tagmap">
+					<img id="result-img" src="./images/mapview.jpg" alt="a map with locations" data-tags="<%=JSON.stringify(taglist)%>" />
+					<div class="caption">Result map</div>
+				</div>
+			</div>
+		</section>
+
+	</main>
+
+	<footer>
+		<span>2018/19 by LKIT</span>
+	</footer>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="./javascripts/geotagging.js"></script>
+	</body>
+	</html>
